--- a/_news/2025-news1.md
+++ b/_news/2025-news1.md
@@ -1,4 +1,4 @@
 ---
-title: "MPSA 2025 in Chicago"
+title: "Annual Midwest Political Science Association Meeting (Chicago, USA)"
 date: 2025-04-03
 ---
