--- a/_news/2025-news2.md
+++ b/_news/2025-news2.md
@@ -1,4 +1,4 @@
 ---
-title: "SASE 2025 in Montreal"
+title: "Society for the Advancement of Socio-Economics Annual Conference (Montreal, Canada)"
 date: 2025-07-09
 ---
