--- a/_news/2025-news5.md
+++ b/_news/2025-news5.md
@@ -1,4 +1,8 @@
 ---
-title: "WeLaR Conference in Brussels"
+title: "Project WeLaR Conference (Brussels, Belgium)"
 date: 2025-06-12
 ---
+
+The **Project WeLaR Conference** in Brussels brought together researchers and policymakers to discuss
+the future of work, welfare, and technology in Europe.  
+Learn more about the project at [Project WeLaR](https://projectwelar.eu/).
