--- a/_news/2025-news4.md
+++ b/_news/2025-news4.md
@@ -1,4 +1,4 @@
 ---
-title: "APSA 2025 in Vancouver"
+title: "Annual American Political Science Association Meeting (Vancouver, Canada)"
 date: 2025-09-11
 ---
