--- a/_news/2025-news5.md
+++ b/_news/2025-news5.md
@@ -1,9 +1,7 @@
 ---
-title: "Project WeLaR Conference (Brussels, Belgium)"
-    <a href="https://projectwelar.eu/" target="_blank">Read more <i class="fas fa-angle-double-right"></i></a>
+title: >-
+	Project WeLaR Conference (Brussels, Belgium)"
+    	<a href="https://projectwelar.eu/" target="_blank">Read more <i class="fas fa-angle-double-right"></i></a>
 date: 2025-06-12
----
 
-The **Project WeLaR Conference** in Brussels brought together researchers and policymakers to discuss
-the future of work, welfare, and technology in Europe.  
-Learn more about the project at [Project WeLaR](https://projectwelar.eu/).
+---
