--- a/_news/2025-news3.md
+++ b/_news/2025-news3.md
@@ -1,5 +1,6 @@
 ---
-title: "ESPAnet Annual Conference (Milan, Italy)"
-    <a href="https://www.espanetmilano2025.it/programme" target="_blank"> Read more <i class="fas fa-angle-double-right"></i></a>
+title: >-
+    ESPAnet Annual Conference (Milan, Italy)
+    <a href="https://www.espanetmilano2025.it/programme" target="_blank"> Link <i class="fas fa-angle-double-right"></i></a>
 date: 2025-08-27
 ---
