--- a/_news/2025-news2.md
+++ b/_news/2025-news2.md
@@ -1,5 +1,6 @@
 ---
-title: "Society for the Advancement of Socio-Economics Annual Conference (Montreal, Canada)"
-    <a href="https://sase.org/events/2025-montreal/" target="_blank"> Read more <i class="fas fa-angle-double-right"></i></a>
+title: >- 
+    Society for the Advancement of Socio-Economics Annual Conference (Montreal, Canada)
+    <a href="https://sase.org/events/2025-montreal/" target="_blank"> Link <i class="fas fa-angle-double-right"></i></a>
 date: 2025-07-09
 ---
