--- a/_news/2025-news5.md
+++ b/_news/2025-news5.md
@@ -1,6 +1,6 @@
 ---
 title: >-
    Project WeLaR Conference (Brussels, Belgium)
-    <a href="https://projectwelar.eu/" target="_blank"> Read more <i class="fas fa-angle-double-right"></i></a>
+    <a href="https://projectwelar.eu/" target="_blank"> Link <i class="fas fa-angle-double-right"></i></a>
 date: 2025-06-12
 ---
